--- a/index.html
+++ b/index.html
@@ -100,6 +100,17 @@
           <option value="Altro">Altro</option>
         </select>
       </label>
+
+      <label>
+        <input type="checkbox" id="filterPaidOnly" /> Solo pagate
+      </label>
+      <label>
+        <input type="checkbox" id="filterUnpaidOnly" /> Solo NON pagate
+      </label>
+      <label class="span-2">
+        <input type="checkbox" id="filterWithReceiptOnly" /> Solo con ricevuta 📎
+      </label>
+
       <button id="clearFilters" class="secondary">Pulisci filtri</button>
     </div>
   </section>
@@ -182,4 +193,5 @@
   </script>
 </body>
 </html>
+
 
