--- a/index.html
+++ b/index.html
@@ -121,6 +121,11 @@
       <div><strong>Totale mese:</strong> <span id="sumMonth">€ 0,00</span></div>
       <div><strong>Media giornaliera:</strong> <span id="avgDay">€ 0,00</span></div>
       <div><strong>Top categoria:</strong> <span id="topCategory">—</span></div>
+
+      <!-- Nuovi contatori -->
+      <div><strong>Pagate (mese):</strong> <span id="countPaid">0</span></div>
+      <div><strong>Non pagate (mese):</strong> <span id="countUnpaid">0</span></div>
+      <div><strong>Con ricevuta (mese):</strong> <span id="countWithReceipt">0</span></div>
     </div>
     <canvas id="barChart" height="200" aria-label="Spese per categoria" role="img"></canvas>
   </section>
@@ -193,5 +198,4 @@
   </script>
 </body>
 </html>
-
 
